--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "15.4",
-    "react-dom": "15.4"
+    "react-dom": "15.4",
+    "redux": "3.6"
   },
   "devDependencies": {
     "babel-core": "6.22",
