--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "15.4",
     "react-dom": "15.4",
+    "react-redux": "5.0",
     "redux": "3.6"
   },
   "devDependencies": {
