--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "webpack-dev-server": "webpack-dev-server --progress --colors --port 7777",
     "start": "if [ ! -d \"node_modules\" ]; then npm install; fi && npm run webpack-dev-server",
-    "clean": "rm -rf node_modules build"
+    "clean": "rm -rf node_modules build",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "dependencies": {
     "react": "15.4",
@@ -18,8 +19,10 @@
   "devDependencies": {
     "babel-core": "6.22",
     "babel-loader": "6.2",
+    "babel-plugin-transform-flow-strip-types": "6.21",
     "babel-preset-stage-3": "6.17",
     "babel-preset-react": "6.2",
+    "flow-bin": "0.37",
     "webpack": "2.2",
     "webpack-dev-server": "2.2"
   }
