--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "author": "Donovan Preston <donovanpreston@gmail.com>",
   "description": "Practice project for grokking redux more deeply",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fzzzy/ubiquitous-happiness.git"
+  },
   "scripts": {
     "webpack-dev-server": "webpack-dev-server --progress --colors --port 7777",
     "start": "if [ ! -d \"node_modules\" ]; then npm install; fi && npm run webpack-dev-server",
@@ -19,11 +23,11 @@
   "devDependencies": {
     "babel-core": "6.22",
     "babel-loader": "6.2",
-    "babel-plugin-transform-flow-strip-types": "6.21",
-    "babel-preset-stage-3": "6.17",
-    "babel-preset-react": "6.2",
-    "flow-bin": "0.37",
-    "webpack": "2.2",
-    "webpack-dev-server": "2.2"
+    "babel-plugin-transform-flow-strip-types": "6.22",
+    "babel-preset-stage-3": "6.22",
+    "babel-preset-react": "6.22",
+    "flow-bin": "0.38",
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.3"
   }
 }
