--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "webpack-dev-server": "webpack-dev-server --progress --colors --port 7777",
     "start": "if [ ! -d \"node_modules\" ]; then npm install; fi && npm run webpack-dev-server",
-    "clean": "rm -rf node_modules build",
+    "clean": "rm -rf node_modules dist",
     "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "dependencies": {
