--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "https://github.com/fzzzy/ubiquitous-happiness.git"
   },
   "scripts": {
+    "build": "webpack && find dist -name '*.js' -exec node transform.js {} \\;",
     "webpack-dev-server": "webpack-dev-server --progress --colors --port 7777",
     "start": "if [ ! -d \"node_modules\" ]; then npm install; fi && npm run webpack-dev-server",
     "clean": "rm -rf node_modules dist",
