--- a/package.json
+++ b/package.json
@@ -25,9 +25,14 @@
     "babel-core": "6.22",
     "babel-loader": "6.2",
     "babel-plugin-transform-flow-strip-types": "6.22",
-    "babel-preset-stage-3": "6.22",
     "babel-preset-react": "6.22",
+    "babel-preset-stage-3": "6.22",
+    "css-loader": "0.26.1",
     "flow-bin": "0.38",
+    "node-sass": "4.5.0",
+    "sass-loader": "6.0.0",
+    "style-loader": "0.13.1",
+    "svg-url-loader": "2.0.2",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.3"
   }
